testdata/golden/invalid/syntax/invalid_octothorpe.cm
# Invalid Octothorpe (Hash) Syntax Tests
# Octothorpe (#) is not supported mid-line in calculations
# It IS supported at the start of a line for Markdown headings

## Mid-line octothorpe (comment-style)

# Simple assignment with comment
x = 10 # this should fail

# Expression with comment
result = 100 + 50 # adding numbers

# Napkin format with annotation
small_num = 47 as napkin # → ~47

## Octothorpe in various positions

# After operator
y = 5 + # incomplete

# Within expression
z = (10 # + 20) * 2

# Multiple octothorpes
a = 100 # first # second

# At end of line
b = 42 #

## Edge cases

# Only octothorpe after whitespace
c = 15   #

# Octothorpe with no space
d = 20# bad

# Mixed with other characters
e = 30 #→ 40
